--- a/officers.html
+++ b/officers.html
@@ -74,7 +74,7 @@
 									<section>
 										<header><h4>General Co-chairs</h4></header>
 			            				<p>
-											<a href="https://www.cse.ust.hk/~raywong/" target="_blank">Raymond Chi-Wing Wong</a> (HKUST, Hong Kong)<br>
+											<a href="https://www.cse.ust.hk/~raywong/" target="_blank">Raymond Chi-Wing Wong</a> (Hong Kong University of Science and Technology, Hong Kong)<br>
 											<a href="https://hamada-rizk.com/" target="_blank">Hamada Rizk</a> (Osaka University, Japan) <br>
 										</p>
                                         <br/>
@@ -127,17 +127,17 @@
 											<a href="http://www.cs.ucr.edu/~amr/" target="_blank">Amr Magdy</a> (University of California Riverside, USA) <br>
                                         </p>
                                         <br/>
-                                        
+                                        -->
                                         <header><h4>Webmaster</h4></header>
                                         <p>
-											<a href="#" target="_blank">Saloua Bouabba</a> (University of Versailles Saint-Quentin, France) <br>
-											<a href="#" target="_blank">Mohammad Abboud</a> (University of Versailles Saint-Quentin, France) <br>
+											<a href="https://harryckh.github.io/" target="_blank">Harry Kai-Ho Chan</a> (The University of Sheffield, United Kingdom) <br>
+											
                                         </p>
                                         <br/>
 
 			
 
-
+                                        <!--
                                     <header><h4>SSTD Steering Committee</h4></header>
 						            	<p>
 						            		<a href="https://sites.google.com/a/ualberta.ca/marionascimento/" target="_blank">Mario A. Nascimento</a> (Northeastern University, Canada)<br>
