--- a/attend.html
+++ b/attend.html
@@ -86,9 +86,9 @@
 							<div class="row">
 								<div class="col-6 col-12-narrow">
 										<section>
-												<h3>Osaka University Nakanoshima Center, Osaka, Japan</h3>
+												<h3><a href="https://www.onc.osaka-u.ac.jp/ target="new">Osaka University, Nakanoshima center</a>, Osaka, Japan</h3>
 												<p>
-													SSTD 2025 takes place at the Osaka University Nakanoshima Center, located at <a href="https://maps.app.goo.gl/sLaKaRS5wxCkAyZ89" target="new">4 Chome-3-53 Nakanoshima, Kita Ward, Osaka, 530-0005, Japan</a>.
+													SSTD 2025 takes place at the Osaka University, Nakanoshima Center, located at <a href="https://maps.app.goo.gl/sLaKaRS5wxCkAyZ89" target="new">4 Chome-3-53 Nakanoshima, Kita Ward, Osaka, 530-0005, Japan</a>.
 												</p>
 											
 										</section>
