--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 					<div class="col-12 col-12-narrow">
 						<header>
 							<h1>19th International Symposium on Spatial and Temporal Data</h1>
-							<p>25-27 August 2025</br>
+							<p>25-27 August, 2025</br>
+							Osaka University, Nakanoshima center</br>
 								Osaka, Japan</p>
 							</header>
 						</div>
@@ -99,7 +100,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 									research ideas and results across academia, industry and government from diverse geographies, and career stages.
 								</p>
 								<p>
-									SSTD 2025 will be held in Osaka, Japan, 25 - 27 August 2025.
+									SSTD 2025 will be held in Osaka University, Nakanoshima center, Osaka, Japan, 25 - 27 August 2025.
 								</p>
 							</div>
 							
