--- a/officers.html
+++ b/officers.html
@@ -128,10 +128,10 @@
                                         </p>
                                         <br/>
                                         -->
-                                        <header><h4>Webmaster</h4></header>
+                                        <header><h4>Web Chair</h4></header>
                                         <p>
 											<a href="https://harryckh.github.io/" target="_blank">Harry Kai-Ho Chan</a> (The University of Sheffield, United Kingdom) <br>
-											
+											<a href="https://mc.net.ist.osaka-u.ac.jp/people/t-amano/" target="_blank">Tatsuya Amano </a> (Osaka University, Japan) <br>
                                         </p>
                                         <br/>
 
