--- a/attend.html
+++ b/attend.html
@@ -19,28 +19,29 @@
 		<nav id="nav">
 		<ul class="container">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="officers.html">Officers</a></li>
+			<li><a href="officers.html">Organizers</a></li>
 			<li><a href="submit.html">Submit</a></li>
-			<li><a href="program.html">Program</a></li>
+		<!--	<li><a href="program.html">Program</a></li>-->
 			<!--<li><a href="#">Register</a></li>-->
 			<li><a class="active" href="#">Attend</a></li>
 		</ul>
 	</nav>
-
+<!-- 
 		<nav id="subnav">
 			<ul class="container">
+
 				<li><a href="#registration">Registration</a></li>
 				<li><a href="#venue">Venue</a></li>
-           <!--     <li><a href="#travel">Travel</a></li>
+               <li><a href="#travel">Travel</a></li>
                 <li><a href="#visa">Visa</a></li>
                 <li><a href="#accommodation">Accommodation</a></li>
-                <li><a href="#attractions">Attractions</a></li>-->
+                <li><a href="#attractions">Attractions</a></li>
 			</ul>
 		</nav>
 
 		<p>&nbsp;</p>
 
-
+-->
 		<!-- Header -->
 	<section id="header" class="dark">
 		<div class="content">
@@ -64,7 +65,7 @@
 		</section>
 
 <!-- Registration -->
-            
+            <!--
                 <section id="registration" class="main">
                     <header>
                         <div class="container">
@@ -72,7 +73,7 @@
                             <h3>Coming soon...</h3>
                         </div>
                     </header>
-
+			-->
 
 			<!-- Venue -->
 				<section id="venue" class="main">
