--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<nav id="nav">
 		<ul class="container">
 			<li><a class="active" href="#header">Home</a></li>
-			<li><a href="officers.html">Officers</a></li>
+			<li><a href="officers.html">Organizers</a></li>
 			<li><a href="submit.html">Submit</a></li>
-			<li><a href="program.html">Program</a></li>
+		<!--	<li><a href="program.html">Program</a></li>-->
 			<li><a href="attend.html">Attend</a></li>
 		</ul>
 	</nav>
-
+	<!--
 	<nav id="subnav">
 		<ul class="container">
 			<li><a href="#about">About</a></li>
@@ -46,7 +46,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	</nav>
 
 	<p>&nbsp;</p>
-
+	-->
 
 	<!-- Header -->
 	<section id="header" class="dark">
