--- a/officers.html
+++ b/officers.html
@@ -132,8 +132,8 @@
 										<br/>
 										<header><h4>Theses and Dissertations Workshop</h4></header>
                                         <p>
-											Yan Huang<br>
-											Chiara Pugliese<br>
+											<a href="https://huangyanann.github.io/" target="_blank">Yan Huang</a> (University of North Texas, USA)<br>
+											<a href="http://hpc.isti.cnr.it/chiara-pugliese/" target="_blank">Chiara Pugliese</a> (ISTI-CNR, Pisa, Italy)<br>
                                         </p>
                                         <br/>
 
