updated homepage, moved important date to give more emphasis

--- a/index.html
+++ b/index.html
@@ -82,32 +82,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						<h2 style="font-weight: bold;">About</h2>
 						<section>
 							<p>
-								The International Symposium on Spatial and Temporal Data 2025 (SSTD 2025) is the
-								nineteenth event
-								of a series of biannual symposia that discuss new and exciting research in spatial,
-								temporal and
-								spatio-temporal data management and related technologies with the goal to set future
-								research directions.
-								The primary focus of SSTD symposia is on original results in the areas of theoretical
-								foundations, design,
-								implementation, and applications of spatial and temporal database technology. SSTD also
-								welcomes experience
-								reports from application specialists and the commercial community that describe lessons
-								learned in the development,
-								operation, and maintenance of actual systems in practical and innovative applications.
-								The goal is to exchange
-								research ideas and results across academia, industry and government from diverse
-								geographies, and career stages.
+								The <span style="font-weight: bold;">International Symposium on Spatial and Temporal Data (SSTD)</span> has a long and distinguished history as a premier forum for researchers, practitioners, and industry leaders to present and discuss spatial and temporal data management innovations. Since its inception in 1989, SSTD has been at the forefront of advancing foundational theories, systems, and applications that address the challenges of handling spatial and temporal information. Over the years, the symposium has played a pivotal role in fostering research that has shaped the evolution of spatial databases, geospatial computing, and spatio-temporal analytics. The <span style="font-weight: bold;">19th edition</span> of SSTD continues this tradition while broadening its focus to explore the full lifecycle of spatial and temporal data, reflecting the growing importance of these data types in an era of big data, AI, and ubiquitous computing.
 							</p>
 						</section>
 					</div>
 					<div class="col-6 col-12-narrow">
-						<h2 style="font-weight: bold;">Locatoin</h2>
-						<section>
-							<p>
-								SSTD 2025 will be held in Osaka University, Nakanoshima center, Osaka, Japan, 25 - 27 August 2025.
-							</p>
-						</section>
+						
 						<h2 style="font-weight: bold;">Important Dates</h2>
 						<section>
 							<table class="dates-table">
@@ -136,6 +116,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 							</table>
 							<p class="timezone-note">
 								Deadlines refer to 23:59 in the AoE (Anywhere on Earth) time zone.
+							</p>
+						</section>
+						<h2 style="font-weight: bold;">Location</h2>
+						<section>
+							<p>
+								SSTD 2025 will be held in Osaka University, Nakanoshima center, Osaka, Japan, 25 - 27 August 2025.
 							</p>
 						</section>
 					</div>
