--- a/submit.html
+++ b/submit.html
@@ -62,7 +62,7 @@
 	<section id="calls" class="main">
 		<header>
 			<div class="container">
-				<h2>Call for Contributions</h2>
+				<h2>Call for Papers</h2>
 
 			</div>
 		</header>
@@ -70,27 +70,22 @@
 		<div class="content style4">
 			<div class="container">
 				<div class="row">
-					<div class="col-6 col-12-narrow">
+					<div class="col-12 col-12-narrow">
 						<h3>Research Track</h3>
 						<p>
 							Authors are invited to submit long and short research papers presenting original
 							contributions. The selection criteria include quality, novelty, correctness, and relevance
 							to SSTD.
 						</p>
-						<p>
-							The <span style="font-weight: bold">short research papers</span> are expected to discuss exciting new work that is not yet mature
-							enough for a long paper. In
-							particular, novel but significant proposals will be considered for acceptance to this
-							category despite not having gone
-							through extensive experimental validation or lacking a strong theoretical foundation.
-						</p>
 					</div>
+					<!-- to be added later
 					<div class="col-6 col-12-narrow">
 						<h3>Demo/Vison Track</h3>
 						<p>
 							TBA
 						</p>
 					</div>
+				-->
 				</div>
 				<div class="row">
 					<div class="col-12 col-12-narrow">
@@ -111,6 +106,19 @@
 							scope aims to foster interdisciplinary discussions and accommodate emerging trends where
 							spatial and temporal data
 							intersect with cutting-edge technologies.
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 col-12-narrow">
+						<h3>Short Research Papers</h3>
+				
+						<p>
+							The <span style="font-weight: bold">short research papers</span> are expected to discuss exciting new work that is not yet mature
+							enough for a long paper. In
+							particular, novel but significant proposals will be considered for acceptance to this
+							category despite not having gone
+							through extensive experimental validation or lacking a strong theoretical foundation.
 						</p>
 					</div>
 				</div>
