updated page name to call for papers

--- a/submit.html
+++ b/submit.html
@@ -20,7 +20,7 @@
 		<ul class="container">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
-			<li><a class="active" href="#header">Submit</a></li>
+			<li><a class="active" href="#header">Call for Papers</a></li>
 			<!--<li><a href="program.html">Program</a></li>-->
 			<li><a href="attend.html">Attend</a></li>
 		</ul>
@@ -73,7 +73,7 @@
 					<div class="col-12 col-12-narrow">
 						<h3>Research Track</h3>
 						<p>
-							Authors are invited to submit long and short research papers presenting original
+							Authors are invited to submit <span style="font-weight: bold;">long and short research papers</span> presenting original
 							contributions. The selection criteria include quality, novelty, correctness, and relevance
 							to SSTD.
 						</p>
