--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 		<ul class="container">
 			<li><a class="active" href="#header">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
-			<li><a href="submit.html">Submit</a></li>
+			<li><a href="submit.html">Call for Papers</a></li>
 			<!--	<li><a href="program.html">Program</a></li>-->
 			<li><a href="attend.html">Attend</a></li>
 		</ul>
