--- a/officers.html
+++ b/officers.html
@@ -20,7 +20,7 @@
 			<ul class="container">
 				<li><a href="index.html">Home</a></li>
 				<li><a class="active" href="#header">Organizers</a></li>
-				<li><a href="submit.html">Submit</a></li>
+				<li><a href="submit.html">Call for Papers</a></li>
 		<!--	<li><a href="program.html">Program</a></li>-->
 			<li><a href="attend.html">Attend</a></li>
 			</ul>
