--- a/submit.html
+++ b/submit.html
@@ -277,6 +277,9 @@
 							required double-column format.
 						</p>
 						<p>
+							Submissions cannot have been or be submitted to another venue while being reviewed at SSTD and must have significant new content compared to previous publications.
+						</p>
+						<p>
 							Long research papers and industry papers are limited to 10 pages. Short research papers,
 							demo
 							papers, and vision papers are limited to 4 pages. These page limits exclude the references.
