--- a/submit.html
+++ b/submit.html
@@ -63,14 +63,15 @@
 		<header>
 			<div class="container">
 				<h2>Call for Papers</h2>
-
+				<p>
+							SSTD 2025 solicits submissions in three tracks. 
+						</p>
 			</div>
 		</header>
-
 		<div class="content style4">
 			<div class="container">
 				<div class="row">
-					<div class="col-12 col-12-narrow">
+					<div class="col-4 col-12-narrow">
 						<h3>Research Track</h3>
 						<p>
 							Authors are invited to submit <span style="font-weight: bold;">long and short research papers</span> presenting original
@@ -78,14 +79,19 @@
 							to SSTD.
 						</p>
 					</div>
-					<!-- to be added later
-					<div class="col-6 col-12-narrow">
-						<h3>Demo/Vison Track</h3>
+
+					<div class="col-4 col-12-narrow">
+						<h3>Demo Track</h3>
 						<p>
-							TBA
+							We invite authors to submit demo papers featuring systems that are fully developed or currently under development but reasonably complete and mature. Demonstration proposals will be evaluated based on their novelty, technical innovations, the challenges being addressed, and the overall practical appeal of the showcased system.
 						</p>
 					</div>
-				-->
+				<div class="col-4 col-12-narrow">
+						<h3>Industry Track</h3>
+						<p>
+							 We invite the submission of industry papers that highlight practical applications, address real-world challenges, share original insights and demonstrate the successful translation of research into impactful solutions for businesses and organizations.
+						</p>
+					</div>
 				</div>
 				<div class="row">
 					<div class="col-12 col-12-narrow">
@@ -280,9 +286,9 @@
 							Submissions cannot have been or be submitted to another venue while being reviewed at SSTD and must have significant new content compared to previous publications.
 						</p>
 						<p>
-							Long research papers and industry papers are limited to 10 pages. Short research papers,
+							Long research papers and industry papers are limited to 10 pages. Short research papers and
 							demo
-							papers, and vision papers are limited to 4 pages. These page limits exclude the references.
+							papers are limited to 4 pages. These page limits exclude the references.
 						</p>
 						<p>
 							The submission link will be posted soon.
