--- a/submit.html
+++ b/submit.html
@@ -77,6 +77,13 @@
 							Authors are invited to submit <span style="font-weight: bold;">long and short research papers</span> presenting original
 							contributions. The selection criteria include quality, novelty, correctness, and relevance
 							to SSTD.
+							</p>
+							<p>
+							The <span style="font-weight: bold">short research papers</span> are expected to discuss exciting new work that is not yet mature
+							enough for a long paper. In
+							particular, novel but significant proposals will be considered for acceptance to this
+							category despite not having gone
+							through extensive experimental validation or lacking a strong theoretical foundation.
 						</p>
 					</div>
 
@@ -290,8 +297,9 @@
 							demo
 							papers are limited to 4 pages. These page limits exclude the references.
 						</p>
-						<p>
-							The submission link will be posted soon.
+						<p> Submissions for the three tracks should be done from the link <a href="https://cmt3.research.microsoft.com/SSTD2025"
+								target="_blank">https://cmt3.research.microsoft.com/SSTD2025</a> selecting the appropriate track.
+							<!--The submission link will be posted soon.-->
 						</p>
 						<p>
 							The fair use of AI tools is permitted and must comply with the ACM policies regarding AI
