--- a/submit.html
+++ b/submit.html
@@ -122,7 +122,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row">
+				<!--<div class="row">
 					<div class="col-12 col-12-narrow">
 						<h3>Short Research Papers</h3>
 				
@@ -134,7 +134,7 @@
 							through extensive experimental validation or lacking a strong theoretical foundation.
 						</p>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</section>
