--- a/attractions.html
+++ b/attractions.html
@@ -70,7 +70,7 @@
             <section id="attractions" class="main">
                 <header>
                     <div class="container">
-                        <h2>Attractions in Osaka</h2>
+                        <h2>Attractions/Events in Osaka</h2>
                     </div>
                 </header>
                 <div class="content style4">
