update venue info

--- a/attend.html
+++ b/attend.html
@@ -87,11 +87,13 @@
 							<div class="row">
 								<div class="col-6 col-12-narrow">
 										<section>
-												<h3><a href="https://www.onc.osaka-u.ac.jp/ target="new">Osaka University, Nakanoshima center</a>, Osaka, Japan</h3>
+												<h3><a href="https://www.onc.osaka-u.ac.jp/">Osaka University, Nakanoshima center</a>, Osaka, Japan</h3>
 												<p>
 													SSTD 2025 takes place at the Osaka University, Nakanoshima Center, located at <a href="https://maps.app.goo.gl/sLaKaRS5wxCkAyZ89" target="new">4 Chome-3-53 Nakanoshima, Kita Ward, Osaka, 530-0005, Japan</a>.
 												</p>
-											
+                                                <div style="text-align:center;">
+                                                    <img src="images/sstd2025_nakanoshima-center.jpg" alt="Osaka University, Nakanoshima center" style="width:80%; margin-top:4px; margin-bottom:12px;">
+                                                </div>
 										</section>
 								</div>
 								<div class="col-6 col-12-narrow">
