publish attractions.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<li><a href="submit.html">Call for Papers</a></li>
 			<!--	<li><a href="program.html">Program</a></li>-->
 			<li><a href="attend.html">Attend</a></li>
+			<li><a href="attractions.html">Attractions</a></li>
 		</ul>
 	</nav>
 	<!--
