--- a/attend.html
+++ b/attend.html
@@ -24,6 +24,7 @@
 		<!--	<li><a href="program.html">Program</a></li>-->
 			<!--<li><a href="#">Register</a></li>-->
 			<li><a class="active" href="#">Attend</a></li>
+			<li><a href="attractions.html">Attractions</a></li>
 		</ul>
 	</nav>
 <!-- 
