--- a/submit.html
+++ b/submit.html
@@ -23,6 +23,7 @@
 			<li><a class="active" href="#header">Call for Papers</a></li>
 			<!--<li><a href="program.html">Program</a></li>-->
 			<li><a href="attend.html">Attend</a></li>
+			<li><a href="attractions.html">Attractions</a></li>
 		</ul>
 	</nav>
 	<!--
