--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(21.01.2025) <a href="./attractions.html">Attractions</a> are updated.</li>
 							<li>(15.01.2025) <a href="./submit.html">Call for papers</a> are updated.</li>
 							<li>(06.12.2024) The website for SSTD'25 is up and running.</li>
 						</ul>
