--- a/officers.html
+++ b/officers.html
@@ -140,6 +140,12 @@
 											<a href="http://hpc.isti.cnr.it/chiara-pugliese/" target="_blank">Chiara Pugliese</a> (ISTI-CNR, Pisa, Italy)<br>
                                         </p>
                                         <br/>
+										<header><h4>Communication Chair</h4></header>
+                                        <p>
+											
+											<a href="http://hpc.isti.cnr.it/beatrice-rapisarda/" target="_blank">Beatrice Rapisarda</a> (ISTI-CNR, Pisa, Italy)<br>
+                                        </p>
+                                        <br/>
 
               							<header><h4>Steering Committee Chair</h4></header>
                                         <p>
