--- a/program.html
+++ b/program.html
@@ -23,6 +23,7 @@
 				<li><a href="submit.html">Call for Papers</a></li>
 			<li><a class="active" href="program.html">Program</a></li>
 			<li><a href="attend.html">Attend</a></li>
+			<li><a href="attractions.html">Attractions</a></li>
 			</ul>
 		</nav>
 
@@ -62,6 +63,7 @@
 
 
 		<!-- Conference Program -->
+		<!--
 		<section id="program" class="main">
 			<header>
 				<div class="container">
@@ -71,7 +73,57 @@
 			</header>
 			
 			</section>
-		
+		-->
+		<!-- Conference Program -->
+		<section id="keynotes" class="main">
+			<header>
+				<div class="container">
+					<h2>Keynotes</h2>
+				</div>
+			</header>
+			<div class="content style4">
+				<div class="container">
+				<div class="container content style4" style="padding-top: 4em;">
+				<div class="row">
+						<div class="col-3 col-12-narrow">
+							<section>
+								<img src="images/keynote-xingxie.jpg" style="width:100%; margin-top:10px; margin-bottom:12px;">
+							</section>
+						</div>
+						<div class="col-9 col-12-narrow">
+							<section>
+								<h3>Keynote 1 &ndash; Xing XIE (Microsoft Research Asia)</h3>
+									<p align="justify">
+									</p>
+									<p align="justify">
+										<b>Biography:</b> <a href="https://www.microsoft.com/en-us/research/people/xingx/" target="_blank"><b>Dr. Xing Xie</b></a> 
+										is a partner research manager at Microsoft Research Asia.
+He received his B.S. and Ph.D. in Computer Science from the University
+of Science and Technology of China in 1996 and 2001, respectively. Since
+joining Microsoft Research Asia in July 2001, Dr. Xie has focused on
+data mining, social computing, and responsible AI. His work has been
+recognized with several prestigious awards, including the IEEE MDM 2023
+Test-of-Time Award, ACM SIGKDD 2022 Test-of-Time Award, ACM SIGKDD China
+2021 Test-of-Time Award, ACM SIGSPATIAL 2020 10-Year Impact Award
+Honorable Mention, and ACM SIGSPATIAL 2019 10-Year Impact Award. He has
+delivered keynote speeches at notable conferences such as MDM 2019,
+ASONAM 2017, and W2GIS 2011. Dr. Xie serves on the editorial boards of
+ACM Transactions on Recommender Systems, ACM Transactions on Social
+Computing, ACM Transactions on Intelligent Systems and Technology, and
+CCF Transactions on Pervasive Computing and Interaction. He served as
+program co-chair of ACM Ubicomp 2011, PCC 2012, UIC 2015, SMP 2017, ACM
+SIGSPATIAL 2021, ACM SIGSPATIAL 2022, IEEE MDM 2022, and PAKDD 2024. Dr.
+Xie is a Fellow of the ACM, IEEE, and China Computer Federation.
+									</p> 
+							</section>
+						</div>
+					</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
 		<!-- Footer -->
 			<section id="footer">
 				<div class="copyright">
