--- a/program.html
+++ b/program.html
@@ -87,12 +87,48 @@
 				<div class="row">
 						<div class="col-3 col-12-narrow">
 							<section>
+								<img src="images/keynote-yamaguchi-2024.jpg" style="width:100%; margin-top:10px; margin-bottom:12px;">
+							</section>
+						</div>
+						<div class="col-9 col-12-narrow">
+							<section>
+								<h3>Keynote 1 &ndash; Hirozumi Yamaguchi (Osaka University)</h3>
+									<p align="justify">
+									</p>
+									<p align="justify">
+										<b>Biography:</b> <a href="https://mc.net.ist.osaka-u.ac.jp/people/h-yamagu/" target="_blank"><b>Hirozumi Yamaguchi </b></a> 
+received his B.E., M.E., and Ph.D. degrees in Information an
+Computer Science from Osaka University, Japan, in 1994, 1996, and 1998,
+respectively. He is currently a full professor at Osaka University, where he
+leads the Mobile Computing Laboratory. His research focuses on cyber-physical
+systems and mobile and pervasive computing, with particular emphasis on smart
+cities and smart living.
+He has served as an area editor for prestigious journals and has taken on
+various roles, including general chair, TPC chair, and organizing committee
+member, for numerous conferences in mobile computing and wireless
+communications. As a principal investigator, he has led multiple national
+projects, including those funded by JST CREST, NICT, and the Ministry of
+Internal Affairs and Communications, focusing on geospatial data, mobility, data
+utilization, and privacy.
+In 2018, he was honored with the Commendation for Science and Technology by the
+Minister of Education, Culture, Sports, Science, and Technology. Since 2024, he
+has also been serving concurrently as the team leader for RIKEN R-CCS's
+large-scale digital twin research team.
+									</p> 
+							</section>
+						</div>
+					</div>
+					</div>
+				<div class="container content style4" style="padding-top: 4em;">
+					<div class="row">
+						<div class="col-3 col-12-narrow">
+							<section>
 								<img src="images/keynote-xingxie.jpg" style="width:100%; margin-top:10px; margin-bottom:12px;">
 							</section>
 						</div>
 						<div class="col-9 col-12-narrow">
 							<section>
-								<h3>Keynote 1 &ndash; Xing XIE (Microsoft Research Asia)</h3>
+								<h3>Keynote 2 &ndash; Xing XIE (Microsoft Research Asia)</h3>
 									<p align="justify">
 									</p>
 									<p align="justify">
@@ -119,7 +155,6 @@ Xie is a Fellow of the ACM, IEEE, and China Computer Federation.
 						</div>
 					</div>
 					</div>
-					
 				</div>
 			</div>
 		</section>
