--- a/attend.html
+++ b/attend.html
@@ -21,7 +21,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
 			<li><a href="submit.html">Call for Papers</a></li>
-		<!--	<li><a href="program.html">Program</a></li>-->
+			<li><a href="program.html">Program</a></li>
 			<!--<li><a href="#">Register</a></li>-->
 			<li><a class="active" href="#">Attend</a></li>
 			<li><a href="attractions.html">Attractions</a></li>
