--- a/attractions.html
+++ b/attractions.html
@@ -20,6 +20,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
 			<li><a href="submit.html">Call for Papers</a></li>
+			<li><a href="program.html">Program</a></li>
 			<li><a href="attend.html">Attend</a></li>
 			<li><a class="active" href="#">Attractions</a></li>
 		</ul>
