--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<li><a class="active" href="#header">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
 			<li><a href="submit.html">Call for Papers</a></li>
-			<!--	<li><a href="program.html">Program</a></li>-->
+			<li><a href="program.html">Program</a></li>
 			<li><a href="attend.html">Attend</a></li>
 			<li><a href="attractions.html">Attractions</a></li>
 		</ul>
@@ -143,8 +143,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
-							<li>(21.01.2025) <a href="./attractions.html">Attractions</a> are updated.</li>
-							<li>(15.01.2025) <a href="./submit.html">Call for papers</a> are updated.</li>
+							<li>(26.01.2025) Updated the <a href="./program.html">Keynote speakers.</a></li>
+							<li>(21.01.2025) Updated the <a href="./attractions.html">Attractions page</a>.</li>
+							<li>(15.01.2025) Updated the<a href="./submit.html">Call for papers</a>.</li>
 							<li>(06.12.2024) The website for SSTD'25 is up and running.</li>
 						</ul>
 					</div>
