--- a/officers.html
+++ b/officers.html
@@ -21,9 +21,9 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a class="active" href="#header">Organizers</a></li>
 				<li><a href="submit.html">Call for Papers</a></li>
-		<!--	<li><a href="program.html">Program</a></li>-->
-			<li><a href="attend.html">Attend</a></li>
-			<li><a href="attractions.html">Attractions</a></li>
+				<li><a href="program.html">Program</a></li>
+				<li><a href="attend.html">Attend</a></li>
+				<li><a href="attractions.html">Attractions</a></li>
 			</ul>
 		</nav>
 
