--- a/submit.html
+++ b/submit.html
@@ -21,7 +21,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
 			<li><a class="active" href="#header">Call for Papers</a></li>
-			<!--<li><a href="program.html">Program</a></li>-->
+			<li><a href="program.html">Program</a></li>
 			<li><a href="attend.html">Attend</a></li>
 			<li><a href="attractions.html">Attractions</a></li>
 		</ul>
