--- a/program.html
+++ b/program.html
@@ -19,7 +19,7 @@
 		<nav id="nav">
 			<ul class="container">
 				<li><a href="index.html">Home</a></li>
-				<li><a  href="#header">Officers</a></li>
+				<li><a  href="#header">Organizers</a></li>
 				<li><a href="submit.html">Call for Papers</a></li>
 			<li><a class="active" href="program.html">Program</a></li>
 			<li><a href="attend.html">Attend</a></li>
