--- a/officers.html
+++ b/officers.html
@@ -96,13 +96,14 @@
 											<a href="https://www.unimi.it/en/ugov/person/fatme-hachem" target="_blank">Fatme Hachem</a> (University of Milan, Italy) <br>											
 										</p>
                                         <br/>
-<!--
-										<header><h4>Tutorial and Keynote Chair</h4></header>
+
+										<header><h4>Tutorial Co-Chairs</h4></header>
 										<p>
-											<a href="https://www.dbs.ifi.lmu.de/cms/personen/professoren/schubert/index.html" target="_blank">Matthias Schubert</a> (LMU, Germany) <br>
+											<a href="https://www.unsw.edu.au/staff/hao-xue" target="_blank">Hao Xue</a> (University of New South Wales) <br>
+											<a href="https://yuxuanliang.com/" target="_blank">Yuxuan Liang</a> Hong Kong University of Science and Technology (Guangzhou) <br>
 										</p>
                                         <br/>
--->
+
 										<header><h4>Local Arrangements Co-chairs</h4></header>
 										<p>
 											<a href="https://www.ist.osaka-u.ac.jp/english/researcher/detail.php?id=114" target="_blank">Akihito Hiromori</a> (Osaka University, Japan) <br>
