--- a/officers.html
+++ b/officers.html
@@ -100,7 +100,7 @@
 										<header><h4>Tutorial Co-Chairs</h4></header>
 										<p>
 											<a href="https://www.unsw.edu.au/staff/hao-xue" target="_blank">Hao Xue</a> (University of New South Wales) <br>
-											<a href="https://yuxuanliang.com/" target="_blank">Yuxuan Liang</a> Hong Kong University of Science and Technology (Guangzhou) <br>
+											<a href="https://yuxuanliang.com/" target="_blank">Yuxuan Liang</a> (Hong Kong University of Science and Technology (Guangzhou)) <br>
 										</p>
                                         <br/>
 
