--- a/officers.html
+++ b/officers.html
@@ -149,7 +149,11 @@
 											<a href="https://mnascimento.sites.northeastern.edu/" target="_blank">Mario A. Nascimento</a> (Northeastern University, Canada)<br>
                                         </p>
                                         <br/>
-                            
+                           			 	<header><h4>Panel Chair</h4></header>
+                                        <p>
+											<a href="https://mnascimento.sites.northeastern.edu/" target="_blank">Mario A. Nascimento</a> (Northeastern University, Canada)<br>
+                                        </p>
+                                        <br/>
 
                                  <!--
 										
