--- a/officers.html
+++ b/officers.html
@@ -84,7 +84,7 @@
 										<p>
 											<a href="http://hpc.isti.cnr.it/chiara-renso/" target="_blank">Chiara Renso</a> (ISTI-CNR, Pisa, Italy) <br>
 											<a href="http://www.cs.ucr.edu/~amr/" target="_blank">Amr Magdy</a> (University of California Riverside, USA) <br>
-											<a href="https://luhua.ruc.dk/" target="_blank">Hua Lu</a> (Roskilde University, Denmark)<br>
+											<a href="https://luhua.ruc.dk/" target="_blank">Hua Lu</a> (Aalborg University, Denmark)<br>
 										
 										</p>
 										 <br/>
