--- a/calls.html
+++ b/calls.html
@@ -69,7 +69,9 @@
 		</header>
 		<div class="content style4">
 			<div class="container">
-
+<p>
+SSTD 2025 solicits submissions in the following tracks.
+</p>
 				<h3><a href="callResearchs.html"> Call for Research / Demo / Industry Track Papers</a></h3>
 				<h3><a href="callThesis.html"> Call for Thesis and Dissertation Workshop Track Papers</a></h3>
 				<h3><a href="callTutorials.html"> Call for Tutorial Proposals</a></h3>
