--- a/officers.html
+++ b/officers.html
@@ -151,7 +151,7 @@
                                         <br/>
                            			 	<header><h4>Panel Chair</h4></header>
                                         <p>
-											<a href="https://mnascimento.sites.northeastern.edu/" target="_blank">Mario A. Nascimento</a> (Northeastern University, Canada)<br>
+											<a href="http://lik.pusan.ac.kr/" target="_blank">Ki-Joune Li</a> (Pusan National University)<br>
                                         </p>
                                         <br/>
 
