--- a/visa.html
+++ b/visa.html
@@ -116,6 +116,10 @@
 										
 										<h4>Invitation Letter for Conference Participants</h4>
 										<p>
+											TBA
+										</p>
+										<--
+										<p>
 											If you require an invitation letter to support your visa application, please contact the SSTD 2025 organizing committee at <a href="mailto:sstd2025@example.com">sstd2025@example.com</a> with the following information:
 										</p>
 										<ul>
@@ -127,7 +131,6 @@
 											<li>Paper title (if presenting)</li>
 											<li>Mailing address where the invitation letter should be sent</li>
 										</ul>
-										
 										<h4>Important Notes</h4>
 										<ul>
 											<li>Visa requirements can change. Please check the latest information on the <a href="https://www.mofa.go.jp/j_info/visit/visa/index.html" target="_blank">official website</a>.</li>
@@ -135,6 +138,8 @@
 											<li>Ensure your passport is valid for at least 6 months beyond your planned stay in Japan.</li>
 											<li>If you plan to visit other countries before or after Japan, check if you need transit visas.</li>
 										</ul>
+																					-->
+
 									</section>
 								</div>
 							</div>
