--- a/visa.html
+++ b/visa.html
@@ -111,7 +111,7 @@
 											</li>
 											<li>Submit your application to the Japanese embassy or consulate.</li>
 											<li>Pay the visa application fee.</li>
-											<li>Wait for processing (typically 5-10 business days).</li>
+											<li>Wait for processing </li>
 										</ol>
 										
 										<h4>Invitation Letter for Conference Participants</h4>
