fix NAV inconsistency

--- a/accommodation.html
+++ b/accommodation.html
@@ -14,28 +14,25 @@
     </head>
 	<body class="is-preload">
 
-
-
-		<nav id="nav">
-		<ul class="container">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="officers.html">Organizers</a></li>
-			<li><a href="submit.html">Call for Papers</a></li>
-		<!--	<li><a href="program.html">Program</a></li>-->
-			<!--<li><a href="#">Register</a></li>-->
-			<li><a class="active" href="attend.html">Attend</a></li>
-		</ul>
-	</nav>
-<nav id="subnav">
-      <ul class="container">
-         <li><a href="registration.html">Registration</a></li>
-         <li><a href="venue.html">Venue</a></li>
-         <li><a href="travel.html">Travel</a></li>
-         <li><a href="visa.html">Visa</a></li>
-         <li><a class="active" href="accommodation.html">Accommodation</a></li>
-         <li><a href="attractions.html">Attractions</a></li>
-      </ul>
-   </nav>
+        <nav id="nav">
+            <ul class="container">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="officers.html">Organizers</a></li>
+                <li><a href="calls.html">Call for Papers / Tutorials</a></li>
+                <li><a href="program.html">Program</a></li>
+                <li><a class="active" href="attend.html">Attend</a></li>
+            </ul>
+        </nav>
+        <nav id="subnav">
+            <ul class="container">
+                <li><a href="registration.html">Registration</a></li>
+                <li><a class="active" href="venue.html">Venue</a></li>
+                <li><a href="travel.html">Travel</a></li>
+                <li><a href="visa.html">Visa</a></li>
+                <li><a href="accommodation.html">Accommodation</a></li>
+                <li><a href="attractions.html">Attractions</a></li>
+            </ul>
+        </nav>
 
    <p>&nbsp;</p>
 		<!-- Header -->
