added ACM policy

--- a/callTutorials.html
+++ b/callTutorials.html
@@ -150,7 +150,35 @@ Proposals must specify the intended length of the tutorial (up to 1.5 hours). If
 		</div>
 
 	</section>
+<!-- ACM -->
+	<section id="instructions" class="main">
+		<header>
+			<div class="container">
+				<h2>Important note to authors about the new ACM open access publishing model</h2>
+			</div>
+		</header>
+		<div class="content style4">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-12-narrow">
+						<p>ACM has introduced a new open access publishing model for the International Conference Proceedings Series (ICPS). Authors based at institutions that are not yet part of the <a href="https://libraries.acm.org/acmopen/open-participants"
+								target="_blank">ACM Open program</a> and do not qualify for a waiver will be required to pay an article processing charge (APC) to publish their ICPS article in the ACM Digital Library. To determine whether or not an APC will be applicable to your article, please follow the detailed guidance here: <a href="https://www.acm.org/publications/icps/author-guidance"
+								target="_blank">https://www.acm.org/publications/icps/author-guidance</a>.</p>
 
+						<p>Further information may be found on the ACM website, as follows:</p>
+
+						<p>Full details of the new ICPS publishing model: <a href="https://www.acm.org/publications/icps/faq"
+								target="_blank">https://www.acm.org/publications/icps/faq</a></p>
+						<p>Full details of the ACM Open program: <a href="https://www.acm.org/publications/openaccess"
+								target="_blank">https://www.acm.org/publications/openaccess</a></p>
+
+						<p>Please direct all questions about the new model to <a href="mailto:icps-info@acm.org"
+								target="_blank">icps-info@acm.org</a>.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 <section id="chairs" class="main" >
 	   <header>
 	       <div class="container">
