--- a/officers.html
+++ b/officers.html
@@ -160,6 +160,7 @@
                                         <header><h4>Sponsorship Chair</h4></header>
                                         <p>
 											<a href="https://takuroyonezawa.info/" target="_blank">Takuro Yonezawa</a> (Nagoya University, Japan)<br>
+											<a href="https://amagata-daichi.notion.site/Welcome-to-Daichi-Amagata-s-Homepage-9d42f7292ccf40279f00eced2e941590" target="_blank">Daichi Amagata</a> (Osaka University, Japan)<br>
                                         </p>
                                         <br/>
                                         
