--- a/accommodation.html
+++ b/accommodation.html
@@ -28,10 +28,10 @@
 	<nav id="subnav">
 		<ul class="container">
 			<li><a href="registration.html">Registration</a></li>
-			<li><a class="active" href="venue.html">Venue</a></li>
+			<li><a href="venue.html">Venue</a></li>
 			<li><a href="travel.html">Travel</a></li>
 			<li><a href="visa.html">Visa</a></li>
-			<li><a href="accommodation.html">Accommodation</a></li>
+			<li><a class="active" href="accommodation.html">Accommodation</a></li>
 			<li><a href="attractions.html">Attractions</a></li>
 		</ul>
 	</nav>
