--- a/visa.html
+++ b/visa.html
@@ -20,9 +20,8 @@
 		<ul class="container">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="officers.html">Organizers</a></li>
-			<li><a href="submit.html">Call for Papers</a></li>
-		<!--	<li><a href="program.html">Program</a></li>-->
-			<!--<li><a href="#">Register</a></li>-->
+			<li><a href="calls.html">Call for Papers / Tutorials</a></li>
+			<li><a href="program.html">Program</a></li>
 			<li><a class="active" href="attend.html">Attend</a></li>
 		</ul>
 	</nav>
