Add Nakanoshima Center image to venue page

--- a/venue.html
+++ b/venue.html
@@ -84,6 +84,7 @@
 												<p>
 													SSTD 2025 takes place at the Osaka University, Nakanoshima Center, located at <a href="https://maps.app.goo.gl/sLaKaRS5wxCkAyZ89" target="new">4 Chome-3-53 Nakanoshima, Kita Ward, Osaka, 530-0005, Japan</a>.
 												</p>
+												<img src="images/sstd2025_nakanoshima-center.jpg" style="width:100%; margin-top:4px; margin-bottom:12px;">
 											
 										</section>
 								</div>
