--- a/accommodation.html
+++ b/accommodation.html
@@ -77,10 +77,8 @@
 					<div class="col-12 col-12-narrow">
 						<section>
 							<h3>Map of Hotels and Conference Venue</h3>
-							<iframe
-								src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3280.5835977215196!2d135.48788208681668!3d34.69270766748726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shotels%20near%20Osaka%20University%20Nakanoshima%20Center!5e0!3m2!1sen!2sus!4v1710136800000!5m2!1sen!2sus"
-								width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-								referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Sc92_C6TIGiFiBdWG2Fc872YYHg7Gf4&ehbc=2E312F&noprof=1" width="100%" height="580" style="border:0;"></iframe>
+							<a href="https://www.google.com/maps/d/u/0/edit?mid=1Sc92_C6TIGiFiBdWG2Fc872YYHg7Gf4&usp=sharing" target="_blank">View in Google Maps</a>
 						</section>
 					</div>
 
@@ -92,37 +90,53 @@
 									<h4>The Ritz-Carlton Osaka</h4>
 									<p>
 										<strong>Distance to Venue:</strong> 15-minute walk<br>
-										<strong>Address:</strong> 2-5-25 Umeda, Kita-ku, Osaka<br>
-										<strong>Features:</strong> Luxury accommodations, multiple dining options, spa,
-										fitness center<br>
 										<strong>Website:</strong> <a
 											href="https://www.ritzcarlton.com/en/hotels/japan/osaka"
 											target="_blank">Visit Website</a>
 									</p>
 								</div>
+
 								<div class="col-4 col-12-narrow">
 									<h4>Conrad Osaka</h4>
 									<p>
 										<strong>Distance to Venue:</strong> 10-minute walk<br>
-										<strong>Address:</strong> 3-2-4 Nakanoshima, Kita-ku, Osaka<br>
-										<strong>Features:</strong> Panoramic city views, indoor pool, multiple
-										restaurants, spa<br>
+										<strong>In the Nakanoshima Island area</strong><br>
 										<strong>Website:</strong> <a
 											href="https://www.hilton.com/en/hotels/osacici-conrad-osaka"
 											target="_blank">Visit Website</a>
 									</p>
 								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>Four Seasons Hotel Osaka</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 10-minute walk<br>
+										<strong>Website:</strong> <a href="https://www.fourseasons.com/osaka/?utm_source=google&utm_medium=organicsearch&utm_campaign=tor-osk-hre-mid-seo-na&utm_content=na-na&utm_term=na"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>THE OSAKA STATION HOTEL, Autograph Collection</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 16-minute walk<br>
+										<strong>Directly connected to the west exit of JR Osaka Station</strong><br/>
+										<strong>Website:</strong> <a
+											href="https://osakastation-hotel.jp/en/"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+								<!--
 								<div class="col-4 col-12-narrow">
 									<h4>Imperial Hotel Osaka</h4>
 									<p>
 										<strong>Distance to Venue:</strong> 12-minute walk<br>
-										<strong>Address:</strong> 1-8-50 Temmabashi, Kita-ku, Osaka<br>
-										<strong>Features:</strong> Riverside location, traditional Japanese hospitality,
-										multiple dining options<br>
 										<strong>Website:</strong> <a href="https://www.imperialhotel.co.jp/e/osaka"
 											target="_blank">Visit Website</a>
 									</p>
 								</div>
+								-->
 							</div>
 						</section>
 					</div>
@@ -132,38 +146,49 @@
 							<h3>Four-Star Hotels</h3>
 							<div class="row">
 								<div class="col-4 col-12-narrow">
-									<h4>Hotel Granvia Osaka</h4>
+									<h4>RIHGA Royal Hotel Osaka, Vignette Collection by IHG</h4>
 									<p>
-										<strong>Distance to Venue:</strong> 8-minute walk<br>
-										<strong>Address:</strong> 3-1-1 Umeda, Kita-ku, Osaka<br>
-										<strong>Features:</strong> Direct access to Osaka Station, shopping, multiple
-										restaurants<br>
+										<strong>Distance to Venue:</strong> 5-minute walk<br>
+										<strong>In the Nakanoshima Island area</strong><br>
 										<strong>Website:</strong> <a href="https://www.hotelgranviaosaka.jp/en"
 											target="_blank">Visit Website</a>
 									</p>
 								</div>
+
+
 								<div class="col-4 col-12-narrow">
 									<h4>Mitsui Garden Hotel Osaka Premier</h4>
 									<p>
-										<strong>Distance to Venue:</strong> 5-minute walk<br>
-										<strong>Address:</strong> 3-4-15 Nakanoshima, Kita-ku, Osaka<br>
-										<strong>Features:</strong> River views, hot spring bath, modern design<br>
+										<strong>Distance to Venue:</strong> 10-minute walk<br>
+										<strong>In the Nakanoshima Island area</strong><br>
 										<strong>Website:</strong> <a
 											href="https://www.gardenhotels.co.jp/osaka-premier/eng"
 											target="_blank">Visit Website</a>
 									</p>
 								</div>
+
 								<div class="col-4 col-12-narrow">
-									<h4>Courtyard by Marriott Osaka</h4>
+									<h4>ANA Crowne Plaza Hotel Osaka, IHG</h4>
 									<p>
-										<strong>Distance to Venue:</strong> 7-minute walk<br>
-										<strong>Address:</strong> 4-2-14 Nakanoshima, Kita-ku, Osaka<br>
-										<strong>Features:</strong> Business-friendly, fitness center, restaurant<br>
+										<strong>Distance to Venue:</strong> 15-minute walk<br>
 										<strong>Website:</strong> <a
-											href="https://www.marriott.com/hotels/travel/osacy-courtyard-osaka"
+											href="https://www.anacrowneplaza-osaka.jp/en/"
 											target="_blank">Visit Website</a>
 									</p>
 								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>Hilton Osaka</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 15-minute walk<br>
+										<strong>Two-minite walk from JR Osaka Station</strong><br/>
+										<strong>Website:</strong> <a
+											href="https://www.hilton.com/en/hotels/osahitw-hilton-osaka/?SEO_id=GMB-APAC-TW-OSAHITW"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+
 							</div>
 						</section>
 					</div>
@@ -173,31 +198,65 @@
 							<h3>Budget-Friendly Hotels</h3>
 							<div class="row">
 								<div class="col-4 col-12-narrow">
-									<h4>Hotel Keihan Yodoyabashi</h4>
-									<p>
-										<strong>Distance to Venue:</strong> 5-minute walk<br>
-										<strong>Address:</strong> 4-1-1 Imabashi, Chuo-ku, Osaka<br>
-										<strong>Features:</strong> Affordable rates, convenient location, clean
-										rooms<br>
-									</p>
-								</div>
-								<div class="col-4 col-12-narrow">
-									<h4>Super Hotel Osaka Yodoyabashi</h4>
-									<p>
-										<strong>Distance to Venue:</strong> 6-minute walk<br>
-										<strong>Address:</strong> 2-4-6 Imabashi, Chuo-ku, Osaka<br>
-										<strong>Features:</strong> Complimentary breakfast, public bath,
-										eco-friendly<br>
-									</p>
-								</div>
-								<div class="col-4 col-12-narrow">
-									<h4>Toyoko Inn Osaka Umeda</h4>
+									<h4>Smile Hotel Osaka Nakanoshima</h4>
 									<p>
 										<strong>Distance to Venue:</strong> 10-minute walk<br>
-										<strong>Address:</strong> 1-9-15 Umeda, Kita-ku, Osaka<br>
-										<strong>Features:</strong> Budget chain, free breakfast, reliable quality<br>
+										<strong>In the Nakanoshima Island area</strong><br>
+										<strong>Website:</strong> <a
+											href="https://smile-hotels.com/hotels/show/osakanakanoshima"
+											target="_blank">Visit Website</a>
 									</p>
 								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>Hotel NCB</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 10-minute walk<br>
+										<strong>In the Nakanoshima Island area</strong><br>
+										<strong>Website:</strong> <a
+											href="https://www.hotel-ncb.co.jp/"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>Hotel Hanshin Annex Osaka</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 13-minute walk<br>
+										<strong>Website:</strong> <a
+											href="https://www.hankyu-hotel.com/en/hotel/hs/hanshinannex"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>Hotel CORDIA Osaka</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 13-minute walk<br>
+										<strong>Website:</strong> <a
+											href="https://cordia-osaka.com/en"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>CANDEO Hotels Osaka The Tower</h4>	
+									<p>
+										<strong>Distance to Venue:</strong> 16-minute walk<br>
+										<strong>Website:</strong> <a
+											href="https://www.candeohotels.com/en/osaka-tower/"
+											target="_blank">Visit Website</a>
+									</p>
+								</div>
+
+								<div class="col-4 col-12-narrow">
+									<h4>Super Hotel Umeda Higobashi</h4>
+									<p>
+										<strong>Distance to Venue:</strong> 11-minute walk<br>
+										<strong>Website:</strong> <a
+											href="https://www.superhoteljapan.com/en/"
+											target="_blank">Visit Website</a>
+									</p>
 							</div>
 						</section>
 					</div>
@@ -215,10 +274,6 @@
 								Please note that the conference does not have any special arrangements or discounted
 								rates with these hotels. The information provided here is for reference purposes only to
 								assist participants with their travel planning.
-							</p>
-							<p>
-								For reimbursement purposes, we recommend keeping all receipts and booking confirmations
-								from your accommodation.
 							</p>
 						</section>
 					</div>
