Update visa inquiry contact information with protected email addresses

--- a/visa.html
+++ b/visa.html
@@ -113,9 +113,18 @@
 											<li>Wait for processing </li>
 										</ol>
 										
-										<h4>Invitation Letter for Conference Participants</h4>
+										<h4>Visa Inquiries</h4>
 										<p>
-											TBA
+											For visa-related inquiries, please contact the SSTD 2025 Local Arrangements Co-chairs:
+										</p>
+										<ul>
+											<li>Akihito Hiromori (Osaka University, Japan)<br>
+											hiromori [at] ist.osaka-u.ac.jp</li>
+											<li>Hiroki Kudo (Kyoto Tachibana University, Japan)<br>
+											yoshikawa-h [at] tachibana-u.ac.jp</li>
+										</ul>
+										<p>
+											Detailed information about invitation letters for visa applications will be available after registration opens.
 										</p>
 										<!--
 										<p>
