--- a/callTutorials.html
+++ b/callTutorials.html
@@ -121,7 +121,8 @@ Proposals must specify the intended length of the tutorial (up to 1.5 hours). If
 				<div class="row">
 					<div class="col-12 col-12-narrow">
 						<p>
-						Tutorial proposals should be submitted via email to all two chairs (see contact details below). Submissions should be at most 4 (four) pages, excluding references, with the <a href="callResearchs.html" target="_blank"> same format</a> as SSTD2025 research papers. 
+						Submissions should be done from the link  
+						<a href="https://cmt3.research.microsoft.com/SSTD2025" target="_blank">https://cmt3.research.microsoft.com/SSTD2025 </a> selecting the tutorial track. Submissions should be at most 4 (four) pages, excluding references, with the <a href="callResearchs.html" target="_blank"> same format</a> as SSTD2025 research papers. 
 </p>
 <p>
 						Each submission should include the following information:
