--- a/callResearchs.html
+++ b/callResearchs.html
@@ -271,8 +271,8 @@
 	       <div class="container">
 	           <div class="row">
 	               <div class="col-12 col-12-narrow">
-	                   <strong>Abstract submission (Research / Demo / Industry Track):</strong> <span style="font-weight: bold;">April 27, 2025</span><br />
-	                   <strong>Paper submission deadline:</strong> <span style="font-weight: bold;">May 4, 2025</span><br />
+	                   <strong>Abstract submission (Research / Demo / Industry Track):</strong> <s>April 27, 2025</s> <span style="font-weight: bold;"> May 11, 2025</span><br />
+	                   <strong>Paper submission deadline:</strong> <s>May 4, 2025</s><span style="font-weight: bold;"> May 18, 2025</span><br />
 	                   <strong>Notification date:</strong> <span style="font-weight: bold;">July 1, 2025</span><br />
 	                   <strong>Camera-ready:</strong> <span style="font-weight: bold;">July 15, 2025</span><br />
 						<br />
@@ -343,7 +343,7 @@
 		</div>
 
 	</section>
-<!-- Instructions -->
+	<!-- ACM -->
 	<section id="instructions" class="main">
 		<header>
 			<div class="container">
@@ -367,13 +367,10 @@
 
 						<p>Please direct all questions about the new model to <a href="mailto:icps-info@acm.org"
 								target="_blank">icps-info@acm.org</a>.</p>
-
-
 					</div>
 				</div>
 			</div>
 		</div>
-
 	</section>
 	
 
