--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 								<tbody>
 									<tr>
 										<td>Abstract submission (Research / Demo / Industry tracks)</td>
-										<td>April 27, 2025</td>
+										<td><s>April 27, 2025</s><br> May 11, 2025</td>
 									</tr>
-									<tr>
+									<tr style="border-top: 1px solid #ccc;">
 										<td>Paper submission deadline (Research / Demo / Industry tracks)</td>
-										<td>May 4, 2025</td>
+										<td><s>May 4, 2025</s><br> May 18, 2025</td>
 									</tr>
-									<tr>
+									<tr style="border-top: 1px solid #ccc;">
 										<td>Notification date</td>
 										<td>July 1, 2025</td>
 									</tr>
-									<tr>
+									<tr style="border-top: 1px solid #ccc;">
 										<td>Camera-ready</td>
 										<td>July 15, 2025</td>
 									</tr>
@@ -142,6 +142,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(28.04.2025) Extended the submission deadline for research / demo / industry tracks. Abstract: <span style="font-weight: bold;">May 11, 2025</span> (AoE); Paper: <span style="font-weight: bold;">May 18, 2025</span> (AoE)</li>
 							<li>(03.02.2025) Updated the <a href="./callTutorials.html">Call for Tutorial Proposal.</a></li>
 							<li>(03.02.2025) Updated the <a href="./callThesis.html">Call for Thesis and Dissertation Workshop Track Papers.</a></li>
 							<li>(26.01.2025) Updated the <a href="./program.html">Keynote speakers.</a></li>
