--- a/index.html
+++ b/index.html
@@ -108,10 +108,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 										<td>Camera-ready</td>
 										<td>July 15, 2025</td>
 									</tr>
-									<tr class="conference-dates" style="border-top: 1px solid #ccc;">
-										<td>Conference dates</td>
-										<td>August 25-27, 2025</td>
-									</tr>
 								</tbody>
 							</table>
 							<p class="timezone-note">
@@ -142,7 +138,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
-							<li>(28.04.2025) Extended the submission deadline for research / demo / industry tracks. Abstract: <span style="font-weight: bold;">May 11, 2025</span> (AoE); Paper: <span style="font-weight: bold;">May 18, 2025</span> (AoE)</li>
+							<li>(06.05.2025) Extended the submission deadline for <a href="./callThesis.html">Thesis and Dissertation Workshop track</a>: <span style="font-weight: bold;">June 1, 2025</span> (AoE)</li>
+							<li>(28.04.2025) Extended the submission deadline for <a href="./callResearchs.html">research / demo / industry tracks</a>. Abstract: <span style="font-weight: bold;">May 11, 2025</span> (AoE); Paper: <span style="font-weight: bold;">May 18, 2025</span> (AoE)</li>
 							<li>(03.02.2025) Updated the <a href="./callTutorials.html">Call for Tutorial Proposal.</a></li>
 							<li>(03.02.2025) Updated the <a href="./callThesis.html">Call for Thesis and Dissertation Workshop Track Papers.</a></li>
 							<li>(26.01.2025) Updated the <a href="./program.html">Keynote speakers.</a></li>
